Tasky Lab 2 - Excercises done

--- a/tasky/src/App.css
+++ b/tasky/src/App.css
@@ -127,3 +127,27 @@ form {
   width: 50%;
   margin: auto;
 }
+
+.priority-low {
+  background-color: green;
+  color: white;
+  padding: 5px 10px;
+  border-radius: 5px;
+  display: inline-block;
+}
+
+.priority-medium {
+  background-color: orange;
+  color: white;
+  padding: 5px 10px;
+  border-radius: 5px;
+  display: inline-block;
+}
+
+.priority-high {
+  background-color: red;
+  color: white;
+  padding: 5px 10px;
+  border-radius: 5px;
+  display: inline-block;
+}
